# Clouds-In-Paxos

./: LICENSE  README.md  paxos-cloud-haskell.cabal  stack.yaml
app/: Main.hs
src/: Agents.hs  Message.hs
