name:                paxos-cloud-haskell
version:             0.1.0.0
homepage:            https://github.com/kderme/Clouds-In-Paxos#readme
license:             BSD3
license-file:        LICENSE
author:              Konstantinos Dermentzis
maintainer:          k.dermenz@gmail.com
Stability:           experimental
copyright:           2017 Konstantinos Dermentzis
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Message, Agents
  build-depends:       base >= 4.7 && < 5
                     , distributed-process
                     , containers
                     , network-transport-tcp
                     , binary >= 0.6.3 && < 0.10
  default-language:    Haskell2010
  ghc-options:         -Wall

executable paxos-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , paxos-cloud-haskell
                     , distributed-process
                     , network-transport-tcp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kderme/Clouds-In-Paxos
